--- a/index.html
+++ b/index.html
@@ -1,41 +1,31 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Challenge 1 - Encriptador</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:ital,wght@0,700;0,900;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/app.css">
-
-
+    <script type="text/javascript" src="javaScript.js"></script>
+    <title>Challenge 1</title>
 </head>
 <body>
-
-    <header>
-        <div class="logo"></div>
-        <h1 class="tittle">Encriptador de Texto</h1>
-    </header>
-
-
     <div class="container">
-        <div class="left-column">
-            <input class="text-input" type="text" placeholder="Ingrese el texto aquí">
+        <div class="logo">
+            <img class="logoImg" src="img/Vector.png">
+            <h1 class="tittle">Encriptador de mensajes</h1>
         </div>
-        <div class="right-column">
-            <img class="imgmuneco" src="img/Muñeco.png" alt="muñeco">
-            <h1 class="texto-mensaje">Ningún mensaje fue encontrado</h1>
-            <textarea class="texto-mensaje2" name="name" rows="8" cols="80">Ingresa el texto que desees encriptar o desencriptar.</textarea>
+        <div class="left">
+            <input class="text-input" id="inputTexto" type="text" placeholder="Ingrese el texto aquí">
         </div>
-        <div class="button">
-        <p>Solo letras minúsculas y sin acentos</p>
-        <button class="button1" type="button">Encriptar</button>
-        <button class="button2" type="button">Desencriptar</button>
+        <div class="right">
+            <img src="img/Muñeco.png" id="imgDer">
+            <h1 id="texto">Ningun mensaje fue encontrado</h1>
+            <textarea id="texto2" name="name" cols="80" rows="8">Ingrese el texto que desees encriptar o desencriptar.</textarea>
+            <button id="copiar" type="button" name="button" onclick="copy()">¡copiar!</button>
         </div>
+        <div class="left-button">
+            <p>Solo minusculas y sin acentos</p>
+            <button type="button" id="btn-encriptar" onclick="encriptar()">Encriptar</button>
+            <button type="button" id="btn-desencriptar" onclick="desencriptar()">Desencriptar</button> 
+        </div>  
     </div>
-
 </body>
 </html>
